--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Clases de Inglés con Enfoque Práctico y Atención Personal</title>
+  <title>Clases de Inglés Premium, Individuales y con Resultados desde el Primer Día</title>
 
   <!-- Fuentes -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
